syntax = "proto3";

package prime_factors;

option java_package = "ru.shakurov.iot.grpc.proto.prime_factors";
option java_multiple_files = true;

message PFRequest {
  uint32 number = 1;
}

message PFResponse {
  uint32 prime_factor = 1;
}

service PFService {
  rpc PrimeFactor(PFRequest) returns (stream PFResponse) {};
}